<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#DEE9ED"
    tools:context=".IncomeExpensesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/blue">

        <ImageButton
            android:id="@+id/imgback"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@drawable/left"
            android:backgroundTint="@color/white" />

        <TextView
            android:id="@+id/txtChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text=""
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box1"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:backgroundTint="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            android:text="@string/txtType"
            android:textColor="@color/blue"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"/>

        <RadioGroup
            android:id="@+id/rgincomeexpensetype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:weightSum="2">

            <RadioButton
                android:id="@+id/rbIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rbIncome"
                android:textSize="@dimen/_13ssp" />

            <RadioButton
                android:id="@+id/rbExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/_13ssp"
                android:text="@string/rbExpense"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box1"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:backgroundTint="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtAmount"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:textSize="@dimen/_13ssp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"/>

        <EditText
            android:id="@+id/edtAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:inputType="number"
            android:hint="Amount" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box1"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:backgroundTint="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/txtCategory"
            android:textColor="@color/blue"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spnspinnercategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/box1"
        android:backgroundTint="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/txtDateandTime"
            android:textColor="@color/blue"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <DatePicker
                android:id="@+id/datepicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_weight="1"
                android:contextClickable="true"
                android:text="@string/txtDate"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

            <TimePicker
                android:id="@+id/timepicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:timePickerMode="clock"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txtTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_weight="1"
                android:contextClickable="true"
                android:text="@string/txtTime"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box1"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:backgroundTint="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/txtmode"
            android:textColor="@color/blue"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spnspinnerMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textsize"
            android:layout_marginHorizontal="@dimen/_5sdp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box1"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:backgroundTint="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/txtnote"
            android:textColor="@color/blue"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Note"
            android:layout_marginHorizontal="@dimen/_8sdp"/>

    </LinearLayout>


    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="@dimen/_15sdp"
        android:text="@string/btnSubmit"/>

</LinearLayout>